<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.electricreader.UserInputActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".UserInputActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FBE9E7"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_action_lightbulb_outline1" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#FFCCBC"
                android:gravity="center"
                android:hint="@string/hint_your_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:background="#FFCCBC"
                    android:gravity="center"
                    android:hint="@string/hint_your_phone"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <ImageButton
                    android:id="@+id/btn_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/contact"
                    android:onClick="pickContact"
                    android:layout_alignBottom="@+id/contact"
                    android:layout_alignRight="@+id/contact"
                    android:layout_alignParentRight="true"
                    android:padding="8dp"
                    android:src="@mipmap/ic_person_white_24dp"
                    android:layout_centerVertical="true"/>

                <!--additional edit  text-->

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <EditText
                android:id="@+id/selectDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#FFCCBC"
                android:gravity="center"
                android:hint="@string/hint_date"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

                <ImageButton
                    android:id="@+id/btn_calender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/selectDate"
                    android:onClick="showDatePickerDialog"
                    android:layout_alignBottom="@+id/selectDate"
                    android:layout_alignRight="@+id/selectDate"
                    android:layout_alignParentRight="true"
                    android:padding="8dp"
                    android:src="@mipmap/date_128"
                    android:layout_centerVertical="true"/>

                <!--additional edit  text-->

            </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/currentReading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:focusable="true"
                android:onClick="takePic"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:background="#FFCCBC"
                android:hint="@string/hint_reading"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <ImageButton
                android:id="@+id/btn_reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:onClick="dispatchTakePictureIntent"
                android:layout_alignTop="@+id/currentReading"
                android:layout_alignBottom="@+id/currentReading"
                android:layout_alignRight="@+id/currentReading"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_photo_camera_white_24dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

            <EditText
                android:id="@+id/unitsRequired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#FFCCBC"
                android:gravity="center"
                android:hint="@string/hint_units_required"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFCCBC"
                android:text="@string/btn_calculate"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frameHolder" />


    <ListView
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:id="@+id/navigationList"
        android:background="#FFCCBC"
        android:layout_gravity="start"/>


</android.support.v4.widget.DrawerLayout>

